# WallGo

./: .coverage  .gitignore  .readthedocs.yml  CHANGELOG.rst  LICENSE  README.md  README.rst  README.text  References.txt  WallVelocitySM_N5_M20txt  boltzmann_test_extras.py  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  test_derivative.py
.github/workflows/: documentation.yml  main.yml  pr.yml  publish.yml  sphinx.yml  tests.yml
Collision/src/: Collision.cpp  main.cpp
Config/: WallGoDefaults.ini
Developer/: CreatePackageData.py
LTE/: WallSpeedLTETemplate.py
Models/: README.md  effectivePotentialNoResum.py  wallGoExampleBase.py  wallGoExampleBaseSavevw.py  wallgo_example_base.py
Models/2HDM/: 2HDM.py
Models/InertDoubletModel/: Makefile  collisionGenerator.py  exampleCollisionDefs.py  inertDoubletModel.py  inertDoubletModelConfig.ini
Models/InertDoubletModelApplicationsPaper/: BM11HighT.txt  BM11LowT.txt
Models/ManySinglets/: exampleCollisionDefs.py  manySinglets.py  manySingletsConfig.ini
Models/NSinglets/: Makefile  NSingletsModel.py
Models/SMEFT/: SMEFT.py
Models/SimpleModel/: simpleModel.py  simpleModelBasic.py  simpleModelWithCollisionGeneration.py
Models/SingleScalar/: singleScalar.py
Models/SingletStandardModel/: SingletStandardModel.py
Models/SingletStandardModel_Z2/: Makefile  SingletStandardModel.Z2.tLtR.py  SingletStandardModel_Z2+gluon.py  SingletStandardModel_Z2.py  SingletStandardModel_Z2_HighT.py  SingletStandardModel_Z2_Simple.py  SingletStandardModel_Z2_gluon.py  WallGoSettings.ini  collisionGenerator.py  drawScans.py  exampleCollisionDefs.py  exampleOutputThermodynamics.py  example_collision_defs.py  hello.py  interpolationTable_Jb_testModel.txt  interpolationTable_Jf_testModel.txt  models.npy  modelsTruncated.npy  scanResults.npy  scanResultsOld.npy  scanResultsTruncated.npy  scan_xSM.py  singletStandardModelZ2.py  singletStandardModelZ2Config.ini
Models/SingletStandardModel_Z2_3d_EFT/: SingletStandardModel_Z2-HT-LO-BM-tuomas.py  SingletStandardModel_Z2-hydro-error.py  SingletStandardModel_Z2-ripper.py  SingletStandardModel_Z2.py
Models/SingletStandardModel_Z2_fullCollision/: Makefile  MatrixElements.xsm.m  SingletStandardModel_Z2.py  collisionGenerator.py
Models/SingletStandardModel_Z2_gluon/: Makefile  MatrixElements.qcd.m  SingletStandardModel_Z2_gluon.py  collisionGenerator.py
Models/StandardModel/: CompareResults.py  Makefile  StandardModel.py  StandardModelReproduceKNR.py  StandardModelReproducePM.py  exampleCollisionDefs.py  example_collision_defs.py  standardModel.py  standardModelConfig.ini  standardModelKNR.py
Models/StandardModelMPCollisions/: Makefile  StandardModelReproducePM.py
Models/TwoHiggsDoubletModel/: Makefile  TwoHiggsDoubletModel.py  collisionGenerator.py
Models/Yukawa/: WallGoSettings.ini  Yukawa.py  exampleCollisionDefs.py  yukawa.py  yukawaConfig.ini  yukawaWithCollisionGeneration.py
Models/YukawaModel/: YukawaModel.py
Models/_DEPRECATED_SingletStandardModel_Z2_gluon/: interpolationTable_Jf_testModel.txt
Models/ahFermion/: ahFermion.py
data/: coll20-Benoit.npy  collisions_N10.hdf5  collisions_N12.hdf5  collisions_N14.hdf5  collisions_N20.hdf5  collisions_N4.hdf5  collisions_N5.hdf5  collisions_N6.hdf5  collisions_N8.hdf5  collisions_top_top_N20.hdf5
data/alphaCsCbPsi-for-LTE-approximation/: readme.txt
data/benoit/: note
data/pressure-for-LTE-approximation/: readme-for-jorinde
docs/: README.rst  conf.py  requirements.txt
docs/source/: Boltzmann.rst  Collision.rst  Config.rst  EffectivePotential.rst  EoM.rst  Grid.rst  Hydro.rst  HydroTemplateModel.rst  Hydrodynamics.rst  Model.rst  Polynomial.rst  Thermodynamics.rst  WallGoTypes.rst  api.rst  boltzmann.rst  collected_examples.rst  collision.rst  conf.py  contact.rst  containers.rst  development.rst  examples.rst  exceptions.rst  faqs.rst  firstExample.rst  first_example.rst  index.rst  installation.rst  intro.rst  license.rst  oli.rst  refs.bib  results.rst  stuff.rst  users.rst
docsrc/source/: faqs.rst  index.rst
doctrees/: changelog.doctree  contact.doctree  development.doctree  environment.pickle  examples.doctree  faqs.doctree  firstExample.doctree  index.doctree  installation.doctree  intro.doctree  license.doctree
doctrees/examples/: inertDoubletModel.doctree  manySinglets.doctree  singletScalarExtension.doctree  standardModel.doctree  yukawa.doctree
doctrees/modules/: boltzmann.doctree  collisionArray.doctree  collisionHelpers.doctree  config.doctree  containers.doctree  effectivePotential.doctree  equationOfMotion.doctree  exceptions.doctree  fields.doctree  freeEnergy.doctree  genericModel.doctree  grid.doctree  grid3Scales.doctree  helpers.doctree  hydrodynamics.doctree  hydrodynamicsTemplateModel.doctree  interpolatableFunction.doctree  (+6 more)
examples/: BMxSM.py  BMxSMsimple.py  LiouvilleSourceTest.py  boltzmannParticleTemp.py  boltzmann_example.py  collision_example.py  collision_xsm.py  eom_alt.py  eom_example.py  first_example.py  liouvilleSourceTest.py  liouvilleTransformationTest.py  model_example.py  quick_results.py  thermo_example.py  vw_exampleBM.py
html/: .buildinfo  changelog.html  contact.html  development.html  examples.html  faqs.html  firstExample.html  genindex.html  index.html  installation.html  intro.html  license.html  objects.inv  py-modindex.html  search.html  searchindex.js
matrixelements/: DiagramsChiral.nb  DiagramsFeyncal.nb
notebooks/: veff.xsm.m  wallspeed-veff-template-v1.nb  wallspeed-veff-template-v2.nb  wallspeed-veff-template-v3.nb  wallspeed-veff-template-v4.nb  xsm.veff-tuomas.m  xsm.veff.m
run/: collisions_N3.hdf5
tests/: BenchmarkPoint.py  TestModel.py  conftest.py  testEoMInit.py  test_Boltzmann.py  test_EOM.py  test_EOMEquilibrium.py  test_Fields.py  test_Grid.py  test_Grid3Scales.py  test_Hydro.py  test_HydroTemplateModel.py  test_Hydrodynamics.py  test_IntegralInterpolation.py  test_Polynomials.py  test_Polynomials2.py  test_coordinates.py  test_derivatives.py  test_eomMockPotential.py  test_oli.py  test_setup.py  test_veff.py  test_version.py
(+396 files in other folders)
