[metadata]
name = WallSpeed
version = 0.0.1
author =
    Andreas Ekstedt
    Oliver Gould
    Joonas Hirvonen
    Benoit Laurent
    Lauri Niemi
    Philipp Schicho
    Tuomas Tenkanen
    Jorinde van de Vis
email =
    andreas.ekstedt@desy.de
    oliver.gould@nottingham.ac.uk
    joonas.o.hirvonen@helsinki.fi
    benoit.laurent@mail.mcgill.ca
    lauri.b.niemi@helsinki.fi
    schicho@itp.uni-frankfurt.de
    tuomas.tenkanen@su.se
    j.m.vandevis@uu.nl
description = A package for computing the bubble wall speed
long_description = file: README.rst
license = MIT
classifiers = Topic :: Scientific/Engineering :: Physics

[options]
packages = find:
python_requires = >=3.7
install_requires =
    numpy
    pytest
    setuptools

[options.packages.find]
where = src
